# rosdep

./: .coveragerc  .earthlyignore  .gitattributes  .gitignore  .hgignore  .travis.yml  CHANGELOG.rst  LICENSE  LICENSE.txt  MANIFEST.in  Makefile  README.md  README.rst  TODOs  ajax.py  azure-pipelines.yml  build.earth  distro.py  dput.cf  manifest.xml  old_distro.py  requirements.txt  rosdoc.yaml  setup.cfg  setup.py  setup.sh  stdeb.cfg  stdeb2.cfg  stdeb3.cfg  urls.py  views.py
.github/workflows/: ci.yaml  doc.yaml
.travis/: install.sh
.travis/shim/: pip
debian/: python-rosdep.postinst
doc/: Makefile  commands.rst  conf.py  contents.rst  contributing_rules.rst  developers_guide.rst  index.rst  make.bat  overview.rst  pip_and_pep_668.rst  rosdep2_api.rst  rosdep_doc_utils.py  rosdep_yaml_format.rst  sources_list.rst
doc/_templates/: index.html
doc/man/: rosdep.1  rosdep.rst
scripts/: rosdep  rosdep-gbp-brew  rosdep-source  rosdep2
src/rosdep/: __init__.py  core.py  exceptions.py  installers.py  loader.py  lookup.py  main.py  model.py  rospkg_loader.py  shell_utils.py
src/rosdep2/: 20-default.list  __init__.py  __main__.py  _version.py  cache_tools.py  catkin_packages.py  catkin_support.py  core.py  dependency_graph.py  gbpdistro_support.py  install.py  installers.py  loader.py  lookup.py  main.py  meta.py  model.py  rep3.py  rosdistrohelper.py  rospack.py  rospkg_loader.py  shell_utils.py  sources.list  sources_list.py  url_utils.py
src/rosinstall_generator/: __init__.py  distro.py  dry_distro.py  (+2 more)
templates/: index.html  landing_page.html  rosinstall.html
test/: __init__.py  conftest.py  test_distro.py  test_flake8.py  test_metadata.py  test_rosdep.py  test_rosdep_alpine.py  test_rosdep_arch.py  test_rosdep_catkin_packages.py  test_rosdep_catkin_support.py  test_rosdep_core.py  test_rosdep_cygwin.py  test_rosdep_debian.py  test_rosdep_dependency_graph.py  test_rosdep_duplicates_key.py  test_rosdep_freebsd.py  test_rosdep_gbpdistro_support.py  test_rosdep_gem.py  test_rosdep_gentoo.py  test_rosdep_installers.py  test_rosdep_issue30.py  test_rosdep_loader.py  test_rosdep_lookup.py  test_rosdep_main.py  test_rosdep_model.py  test_rosdep_npm.py  test_rosdep_opensuse.py  test_rosdep_osx.py  test_rosdep_pip.py  test_rosdep_redhat.py  test_rosdep_rep3.py  test_rosdep_rospkg_loader.py  test_rosdep_shell_utils.py  test_rosdep_slackware.py  test_rosdep_source.py  test_rosdep_sources_list.py  test_rosdep_version_checking.py  test_rosdep_windows.py  test_rosdep_yocto.py
test/tree/catkin/another_catkin_package/: package.xml
test/tree/catkin/fake_catkin_package/: package.xml
test/tree/catkin/metapackage_with_deps/: package.xml
test/tree/catkin/multi_dep_type_catkin_package/: package.xml
test/tree/catkin/package_with_documentation/: package.xml
test/tree/catkin/simple_catkin_package/: package.xml
(+59 files in other folders)
