<package>
  <name>another_catkin_package</name>
  <version>0.0.0</version>
  <description>
    This is a another package
  </description>
  <maintainer email="nobody@example.org">Nobody</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>simple_catkin_package</build_depend>
</package>
