<package>
  <name>fake_catkin_package</name>
  <version>0.0.0</version>
  <description>
    This is a simple package
  </description>
  <maintainer email="nobody@example.org">Nobody</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>bar</build_depend>
  <build_depend>foo</build_depend>
  <build_depend>metapackage_with_deps</build_depend>
</package>
