<package format="2">
  <name>multi_dep_type_catkin_package</name>
  <version>0.0.0</version>
  <description>
    This is a package with depencencies of multiple types
  </description>
  <maintainer email="nobody@example.org">Nobody</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>eigen</depend>
  <build_depend>testboost</build_depend>
  <build_export_depend>testtinyxml</build_export_depend>
  <exec_depend>testlibtool</exec_depend>
  <test_depend>curl</test_depend>
  <doc_depend>epydoc</doc_depend>

</package>
