<package format="2">
  <name>package_with_documentation</name>
  <version>0.0.0</version>
  <description>
    This is a another package
  </description>
  <maintainer email="nobody@example.org">Nobody</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <doc_depend>simple_catkin_package</doc_depend>
</package>
