<package>
  <name>simple_catkin_package</name>
  <version>0.0.0</version>
  <description>
    This is a simple package
  </description>
  <maintainer email="nobody@example.org">Nobody</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>testboost</build_depend>
</package>
